5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions (1)/1800_2570.log
== TEST (2019-06-11 10:19:42) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = p * (x[i]-m)
p = p**(1/n)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:00) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = p * (x[i]-m)
p = p**(1/n)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:14) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = p * (x[i]-m)
p = p**(1/n)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:20:34) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = p * (x[i]-m)
p = p**(1/size(x))
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:24:30) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = p * (x[i]-m)
   print(p)
-- ERROR:
File "XXXX", line 9
    print(p)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:24:43) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = p * (x[i]-m)

	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:30) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = (x[i]-m)*p

	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:42) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)

	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:02) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)**(1/n)

	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:17) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)

	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:34) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)*p

	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:27) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)*p
p = p**(1/n)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:45) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)*p
p = p**(1/n)
print(round(p, 3)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:47) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)*p
p = p**(1/n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:30:52) 
-- CODE:
from numpy import*

x = array(eval(input("Vetor:")))
n = size(x)
m = sum(x)/n
p = 1
for i in range(size(x)):
	p = abs(x[i]-m)*p
p = p**(1/n)
print(round(p, 3))
-- EXECUTION TIME:
0.985326
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
